Changes since version 0.9.0-pre4
- Added help sections in handbook.
- TV settings are now stored in ~/.kde/share/apps/kmplayer/tv.xml. There is an
  automatic conversion. Should make manual changes more easy, see handbook for
  the format. Now also XVideo port and encoding can be configured, although
  manually only.
- More work on SMIL. Allow playing mediatype elements w/o having a region
  assigned, fixes audio only streams (eg. with the <audio> tag).
- Optionally use the expat SAX parser (instead of kmplayer's own one) when
  configured with --enable-expat. Note, the expat parser is more strict and
  therefor can misread some ASX files.
Changes since version 0.9.0-pre3
- Fix for DVD submenus for MPlayer and update regexp for audio/subtitle
  languages
- More work on SMIL. Show active SMIL element in playlist using the color
  settings. Like mediatypes, if set/animate elements have a duration than it
  should not deactivate itself immediately.
- Undo 'First jump to URL source page when opening an URL' from 0.8.1. Now the
  'Configure KMPlayer' option jumps to that page. File open, opens a file
  dialog again (and can select multible files)
- Allow opening multible files
- Support for gif movies in SMIL's 'img' element
- Regression fix plugin; when split over multible objects, the base url could
  be opened instead of the SRC url.
Changes since version 0.9.0-pre2
- Support javascript properties FileName and Volume
- Internal redesign of DOM classes
- Store current url in KDE's session config
- Added a 'Clear History' action, that will clear recent files and URL source
  history
- Delayed mouse hiding in fullscreen, patch from Ben Laenen
- Option for docking in system tray
- Smarter painting when moving regions in SMIL document
- More work on SMIL support. Implemented animate's 'values' attribute and
  'calcMode="discrete"'. Added 'fit' attribute for mediatypes (only used
  for images now, and value 'scroll' is not implemented). Group