@@ -36,7 +36,7 @@ Name[hi]=केएमप्लेयर
 Name[hu]=KMPLayer
 Name[sv]=Kmplayer
 Name[ta]=கேஎம்இயக்கி
-MimeType=audio/x-mp3;audio/m3u;audio/mpegurl;audio/x-m3u;audio/x-pn-realaudio;audio/x-scpls;audio/x-vorbis;application/x-kmplayer;application/x-mplayer2;application/x-ogg;audio/x-mp2;video/mpeg;audio/x-mpegurl;audio/x-wav;audio/x-mod;video/x-avi;video/x-ms-asf;video/x-ms-wmp;video/x-ms-wmv;video/x-msvideo;video/quicktime;video/x-flic;uri/mms;uri/pnm;
+MimeType=audio/x-mp3;audio/m3u;audio/mpegurl;audio/x-m3u;audio/x-pn-realaudio;audio/x-scpls;audio/x-vorbis;application/x-kmplayer;application/x-mplayer2;application/x-ogg;audio/x-mp2;video/mpeg;audio/x-mpegurl;audio/x-wav;audio/x-mod;video/mediaplayer;video/x-avi;video/x-ms-asf;video/x-ms-wmp;video/x-ms-wmv;video/x-msvideo;video/quicktime;video/x-flic;uri/mms;uri/pnm;
 InitialPreference=7
 Categories=Qt;KDE;AudioVideo;
 GenericName=Media Player
