@@ -5,8 +5,12 @@
     <Action name="play"/>
     <Action name="pause"/>
     <Action name="stop"/>
+    <Action name="edit_playlist_item"/>
   </Menu>
 </MenuBar>
+<ActionProperties>
+  <Action shortcut="F2" name="edit_playlist_item"/>
+</ActionProperties>
 <Toolbar name="mainToolBar"><text></text>
   <Action name="play"/>
   <Action name="pause"/>
