@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="kmplayer" version="15">
+<kpartgui name="kmplayer" version="16">
 <MenuBar>
   <Menu name="file"><text>&amp;File</text>
     <Action name="open"/>
@@ -42,6 +42,8 @@
     <Action name="pause"/>
     <Action name="stop"/>
     <Separator />
+    <Action name="edit_playlist_item"/>
+    <Separator />
     <Action name="view_arts_control"/>
   </Menu>
   <Menu name="settings"><text>&amp;Settings</text>
@@ -57,6 +59,7 @@
   <Action shortcut="R" name="play" />
   <Action shortcut="P" name="pause" />
   <Action shortcut="S" name="stop" />
+  <Action shortcut="F2" name="edit_playlist_item"/>
   <Action shortcut="C" name="view_arts_control" />
 </ActionProperties>
 <Toolbar name="mainToolBar"><text></text>
